# data_infra_monitor_with_llm

./: README.md  data_infra_monitor.py  pyproject.toml
data/: operation_history.txt  operation_manual.txt
