[project]
name = "data-infra-monitor-with-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "pandas>=2.3.1",
    "seaborn>=0.13.2",
    "bs4>=0.0.2",
    "crawl4ai>=0.7.0",
    "deepl>=1.22.0",
    "docling>=2.41.0",
    "gradio>=5.35.0",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.6",
    "langchain-huggingface>=0.3.0",
    "langchain-neo4j>=0.4.0",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.27",
    "langchain-tavily>=0.2.7",
    "langdetect>=1.0.9",
    "langfuse>=3.1.3",
    "langgraph>=0.5.2",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langgraph-cli[inmem]>=0.3.4",
    "langgraph-supervisor>=0.0.27",
    "langgraph-swarm>=0.0.12",
    "openpyxl>=3.1.5",
    "pypdf>=5.7.0",
    "rapidfuzz>=3.13.0",
    "sentence-transformers>=5.0.0",
    "tavily-python>=0.7.9",
]
